[package]
name = "volo-rate-limiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Currently there are nothing to do with the "volo-thrift" feature.
# We still advise users to use the feature flag, to reduce the possibility of breaking changes in future upgrades.
volo-grpc = ["dep:volo-grpc"]
volo-thrift = ["dep:volo-thrift"]
tokio = ["dep:futures", "dep:tokio"]

[dependencies]
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = ["time", "sync"], optional = true }
volo = "*"
volo-grpc = { version = "*", optional = true }
volo-thrift = { version = "*", optional = true }
quanta = "0.12.0"
num_cpus = "1.16.0"
